--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-react": "^7.18.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "nodemon": "^2.0.22",
