--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "start": "node server/index.js",
-    "start:dev": "nodemon server/index.js --ignore dist/ --ignore src/ & npm run build:dev"
+    "start:dev": "DATABASE_URL='mongodb://localhost:27017/checkmark-app' nodemon server/index.js --ignore dist/ --ignore src/ & npm run build:dev"
   },
   "keywords": [],
   "author": "",
